<resources>
    <string name="app_name">Convidados</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Convidados SCFV</string>
    <string name="nav_header_subtitle">Altor: Geovane Almeida da Silva</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_allGuests">Todos os convidados</string>
    <string name="menu_preset">presentes</string>
    <string name="menu_absent">Ausentes</string>
    <string name="name">Nome</string>
    <string name="presence">Presença</string>
    <string name="radioPresente">Presente</string>
    <string name="radioAbsent">Ausente</string>
    <string name="save">Salvar</string>
    <string name="guest">Convidado</string>
</resources>