<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_all_guests">

    <fragment
        android:id="@+id/nav_all_guests"
        android:name="com.example.convidados.view.ui.AllGuestsFragment"
        android:label="@string/menu_allGuests"
        tools:layout="@layout/fragment_all_guests" />

    <fragment
        android:id="@+id/nav_preset"
        android:name="com.example.convidados.view.ui.PresetFragment"
        android:label="@string/menu_preset"
        tools:layout="@layout/fragment_preset" />

    <fragment
        android:id="@+id/nav_absent"
        android:name="com.example.convidados.view.ui.AbsentFragment"
        android:label="@string/menu_absent"
        tools:layout="@layout/fragment_absent" />
</navigation>